--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "format": "prettier --config .prettierrc.json --write '**/*.tsx'"
   },
   "dependencies": {
+    "firebase": "^8.6.5",
     "next": "10.2.3",
+    "next-auth": "^3.25.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.34.1",
@@ -22,6 +24,7 @@
     "@types/react": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
+    "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^7.28.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.24.0",
